--- a/AppFrasesdoDia/app/src/main/res/values/strings.xml
+++ b/AppFrasesdoDia/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">App Frases do Dia</string>
+    <string name="logo_app">Logo app</string>
+    <string name="nova_frase">Nova Frase</string>
+    <string name="initial_text">Pressione o botão para gerar uma nova frase</string>
 </resources>
